# MGARD-Research

./: CMakeLists.txt  CMakeLists.txt.cuda  CMakeLists.txt.hip  build_mgard_cuda.sh  clang-format.sh  convert.py  cuda2hip.sh  parse_trace.py  print_csv.py  test.sh
cuda_test/bin2mc/: CMakeLists.txt  bp2bin.cxx
cuda_test/bp2mc2vtk/: CMakeLists.txt  bp2bin.cxx  convert_data.sh
include/: LinearQuantizer.tpp  TensorLinearOperator.tpp  TensorMassMatrix.tpp  TensorMeshHierarchy.tpp  mgard.tpp  mgard_api.tpp  mgard_cuda_api.h
include/cuda/: Array.h  AutoTuner.h  CMakeLists.txt  Common.h  CommonInternal.h  DataRefactoring.h  DataRefactoring.hpp  DataRefactoring_AMR.h  ErrorCalculator.h  Functor.h  GPKFunctor.h  GridProcessingKernel.h  GridProcessingKernel.hpp  GridProcessingKernel3D.h  GridProcessingKernel3D.hpp  Handle.h  IPKFunctor.h  IterativeProcessingKernel.hpp  IterativeProcessingKernel3D.h  IterativeProcessingKernel3D.hpp  IterativeProcessingKernel3D_AMR.h  IterativeProcessingKernel3D_AMR.hpp  LPKFunctor.h  LevelwiseProcessingKernel.hpp  LinearProcessingKernel.h  LinearProcessingKernel.hpp  LinearProcessingKernel3D.h  LinearProcessingKernel3D.hpp  LinearQuantization.h  LinearQuantization.hpp  LosslessCompression.h  MemoryManagement.h  Metadata.h  PrecomputeKernels.h  SubArray.h  Task.h
src/cuda/: API.cu  Array.cu  CMakeLists.txt  CompressionWorkflow.cu  DataRefactoring.cu  DataRefactoring_AMR.cu  ErrorCalculator.cu  Executable.cpp  Handle.cu  LosslessCompression.cu  MemoryManagement.cu  Message.cpp  Metadata.cpp  MgardCudaExec.cpp  MgardSerialExec.cpp  SubArray.cu  (+5 more)
(+70 files in other folders)
